--- a/index.html
+++ b/index.html
@@ -17,31 +17,31 @@
 		<div class="line">
 			<div class="row">
 				<a class="col card" href="https://www.facebook.com/sviuh" target="_blank">
-					<div class="picture"><img src="./image/facebook.png" alt="" width="350"></div>
+					<div class="picture"><img src="./image/facebook.png" alt="" width="350" class="logo"></div>
 					<div class="card-footer">FACEBOOK IUH</div>
 				</a>
 				<a class="col card center" href="https://sv.iuh.edu.vn" target="_blank">
-					<div class="picture "><img src="./image/ASC.png" alt="" width="350"></div>
+					<div class="picture "><img src="./image/ASC.png" alt="" width="350" class="logo"></div>
 					<div class="card-footer">TRANG SV IUH</div>
 				</a>
 				<a class="col card" href="https://lms.iuh.edu.vn" target="_blank">
-					<div class="picture"><img src="./image/moodle.png" alt="" width="350"></div>
+					<div class="picture"><img src="./image/moodle.png" alt="" width="350" class="logo"></div>
 					<div class="card-footer">TRANG LMS</div>
 				</a>
 		</div>
 		<div class="line">
 			<div class="row">
 				<a class="col card" href="https://doantn.iuh.edu.vn" target="_blank">
-						<div class="picture"><img src="./image/Doan.png" alt="" width="350"></div>
-						<div class="card-footer">ĐOÀN TRƯỜNG IUH</div>
+						<div class="picture"><img src="./image/Doan.png" alt="" width="350" class="logo"></div>
+						<div class="card-footer">ĐOÀN IUH</div>
 					</a>
 				</a>
 				<a class="col card center" href="https://sv.iuh.edu.vn/tra-cuu-thong-tin.html" target="_blank">
-					<div class="picture "><img src="./image/ASC.png" alt="" width="350"></div>
-					<div class="card-footer">TRA CỨU THÔNG TIN SV</div>
+					<div class="picture "><img src="./image/ASC.png" alt="" width="350" class="logo"></div>
+					<div class="card-footer">THÔNG TIN SV</div>
 				</a>
 				<a class="col card" href="http://fit.iuh.edu.vn" target="_blank">
-					<div class="picture"><img src="./image/Logo.png" alt="" width="350"></div>
+					<div class="picture"><img src="./image/Logo.png" alt="" width="350" class="logo"></div>
 					<div class="card-footer">KHOA CNTT</div>
 				</a>
 			</div>
