--- a/index.html
+++ b/index.html
@@ -8,44 +8,61 @@
 	<title>WEBSITE IUH</title>
 </head>
 <body>
-	<div class="header">
-		<a href="./image/Fley.png" target="_blank"><img src="./image/Fley.png" alt="Logo Fley" width="80" class="image"></a>
-		<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://banh-mi.github.io/WEBSITE_IUH/" class="share">Share</a>
-		<button class="download"  onclick="alert('Tính năng đang cập nhật vui lòng chờ!')">Download</button> 
-	</div>
 	<div class="main">
-		<div class="line">
-			<div class="row">
-				<a class="col card" href="https://www.facebook.com/sviuh" target="_blank">
-					<div class="picture"><img src="./image/facebook.png" alt="" width="350" class="logo"></div>
-					<div class="card-footer">FACEBOOK IUH</div>
-				</a>
-				<a class="col card center" href="https://sv.iuh.edu.vn" target="_blank">
-					<div class="picture "><img src="./image/ASC.png" alt="" width="350" class="logo"></div>
-					<div class="card-footer">TRANG SV IUH</div>
-				</a>
-				<a class="col card" href="https://lms.iuh.edu.vn" target="_blank">
-					<div class="picture"><img src="./image/moodle.png" alt="" width="350" class="logo"></div>
-					<div class="card-footer">TRANG LMS</div>
-				</a>
-		</div>
-		<div class="line">
-			<div class="row">
-				<a class="col card" href="https://doantn.iuh.edu.vn" target="_blank">
-						<div class="picture"><img src="./image/Doan.png" alt="" width="350" class="logo"></div>
-						<div class="card-footer">ĐOÀN IUH</div>
-					</a>
-				</a>
-				<a class="col card center" href="https://sv.iuh.edu.vn/tra-cuu-thong-tin.html" target="_blank">
-					<div class="picture "><img src="./image/ASC.png" alt="" width="350" class="logo"></div>
-					<div class="card-footer">THÔNG TIN SV</div>
-				</a>
-				<a class="col card" href="http://fit.iuh.edu.vn" target="_blank">
-					<div class="picture"><img src="./image/Logo.png" alt="" width="350" class="logo"></div>
-					<div class="card-footer">KHOA CNTT</div>
+		<div class="header">
+			<div>
+				<a href="./image/Fley.png" target="_blank">
+					<img src="./image/Fley.png" alt="Logo Fley" class="image">
 				</a>
 			</div>
+			<div class="title">TỔNG HỢP WEBSITE IUH</div>
+			<div>
+				<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://banh-mi.github.io/WEBSITE_IUH/">
+					<button class="share">Share</button>
+				</a>
+			</div>
+			 
 		</div>
-	</div>
+		<div class="body">
+			<div class="row row-cols">
+				<div class="col">
+					<a href="https://www.facebook.com/sviuh" target="_blank" class="card">
+						<img src="./image/facebook.png" alt="">
+						<div class="card-footer">FACEBOOK IUH</div>
+					</a>
+				</div>
+				<div class="col">
+					<a href="https://sv.iuh.edu.vn" target="_blank" class="card">
+						<img src="./image/ASC.png" alt="">
+						<div class="card-footer">SV IUH</div>
+					</a>
+				</div>
+				<div class="col">
+					<a href="https://lms.iuh.edu.vn" target="_blank" class="card">
+						<img src="./image/moodle.png" alt="">
+						<div class="card-footer">LMS</div>
+					</a>
+				</div>
+				<div class="col">
+					<a href="https://doantn.iuh.edu.vn" target="_blank" class="card">
+						<img src="./image/Doan.png" alt="">
+						<div class="card-footer">ĐOÀN TRƯỜNG</div>
+					</a>
+				</div>
+				<div class="col">
+					<a href="https://sv.iuh.edu.vn/tra-cuu-thong-tin.html" target="_blank" class="card">
+						<img src="./image/ASC.png" alt="">
+						<div class="card-footer">THÔNG TIN SV</div>
+					</a>
+				</div>
+				<div class="col">
+					<a href="http://fit.iuh.edu.vn" target="_blank" class="card">
+						<img src="./image/Logo.png" alt="">
+						<div class="card-footer">KHOA CNTT</div>
+					</a>
+				</div>
+			</div>		
+		</div>
+	</div>	
 </body>
 </html>
