--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<img src="./image/Fley.png" alt="Logo Fley" class="image">
 				</a>
 			</div>
-			<div class="title">TỔNG HỢP WEBSITE IUH</div>
+			<div class="title">WEBSITE IUH</div>
 			<div>
 				<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://banh-mi.github.io/WEBSITE_IUH/">
 					<button class="share">Share</button>
