--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/bootstrap-grid.min.css">
 	<link rel="icon" type="image/x-icon" href="./image/ICON.png">
 	<title>WEBSITE IUH</title>
 </head>
@@ -16,46 +17,41 @@
 				</a>
 			</div>
 			<div class="title">WEBSITE IUH</div>
-			<div>
-				<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://banh-mi.github.io/WEBSITE_IUH/">
-					<button class="share">Share</button>
-				</a>
-			</div>
-			 
 		</div>
-		<div class="body">
-			<div class="row row-cols">
-				<div class="col">
+	</div>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-6 col-lg-4">
 					<a href="https://www.facebook.com/sviuh" target="_blank" class="card">
 						<img src="./image/facebook.png" alt="">
 						<div class="card-footer">FACEBOOK IUH</div>
 					</a>
 				</div>
-				<div class="col">
+				<div class="col-6 col-lg-4">
 					<a href="https://sv.iuh.edu.vn" target="_blank" class="card">
 						<img src="./image/ASC.png" alt="">
 						<div class="card-footer">SV IUH</div>
 					</a>
 				</div>
-				<div class="col">
+				<div class="col-6 col-lg-4">
 					<a href="https://lms.iuh.edu.vn" target="_blank" class="card">
 						<img src="./image/moodle.png" alt="">
 						<div class="card-footer">LMS</div>
 					</a>
 				</div>
-				<div class="col">
+				<div class="col-6 col-lg-4">
 					<a href="https://doantn.iuh.edu.vn" target="_blank" class="card">
 						<img src="./image/Doan.png" alt="">
 						<div class="card-footer">ĐOÀN TRƯỜNG</div>
 					</a>
 				</div>
-				<div class="col">
+				<div class="col-6 col-lg-4">
 					<a href="https://sv.iuh.edu.vn/tra-cuu-thong-tin.html" target="_blank" class="card">
 						<img src="./image/ASC.png" alt="">
 						<div class="card-footer">THÔNG TIN SV</div>
 					</a>
 				</div>
-				<div class="col">
+				<div class="col-6 col-lg-4">
 					<a href="http://fit.iuh.edu.vn" target="_blank" class="card">
 						<img src="./image/Logo.png" alt="">
 						<div class="card-footer">KHOA CNTT</div>
@@ -63,6 +59,5 @@
 				</div>
 			</div>		
 		</div>
-	</div>	
 </body>
 </html>
