--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="./css/bootstrap-grid.min.css">
 	<link rel="icon" type="image/x-icon" href="./image/ICON.png">
 	<title>WEBSITE IUH</title>
+	<script src="https://cdn.lordicon.com/lusqsztk.js"></script>
 </head>
 <body>
 	<div class="main">
@@ -17,47 +18,51 @@
 				</a>
 			</div>
 			<div class="title">WEBSITE IUH</div>
+			<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://banh-mi.github.io/WEBSITE_IUH">
+				<lord-icon src="https://cdn.lordicon.com/dlkvcwcu.json" trigger="loop" class="share"></lord-icon>
+			</a>
 		</div>
 	</div>
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-6 col-lg-4">
-					<a href="https://www.facebook.com/sviuh" target="_blank" class="card">
-						<img src="./image/facebook.png" alt="">
-						<div class="card-footer">FACEBOOK IUH</div>
-					</a>
-				</div>
-				<div class="col-6 col-lg-4">
-					<a href="https://sv.iuh.edu.vn" target="_blank" class="card">
-						<img src="./image/ASC.png" alt="">
-						<div class="card-footer">SV IUH</div>
-					</a>
-				</div>
-				<div class="col-6 col-lg-4">
-					<a href="https://lms.iuh.edu.vn" target="_blank" class="card">
-						<img src="./image/moodle.png" alt="">
-						<div class="card-footer">LMS</div>
-					</a>
-				</div>
-				<div class="col-6 col-lg-4">
-					<a href="https://doantn.iuh.edu.vn" target="_blank" class="card">
-						<img src="./image/Doan.png" alt="">
-						<div class="card-footer">ĐOÀN TRƯỜNG</div>
-					</a>
-				</div>
-				<div class="col-6 col-lg-4">
-					<a href="https://sv.iuh.edu.vn/tra-cuu-thong-tin.html" target="_blank" class="card">
-						<img src="./image/ASC.png" alt="">
-						<div class="card-footer">THÔNG TIN SV</div>
-					</a>
-				</div>
-				<div class="col-6 col-lg-4">
-					<a href="http://fit.iuh.edu.vn" target="_blank" class="card">
-						<img src="./image/Logo.png" alt="">
-						<div class="card-footer">KHOA CNTT</div>
-					</a>
-				</div>
-			</div>		
-		</div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-6 col-lg-4">
+				<a href="https://www.facebook.com/sviuh" target="_blank" class="card">
+					<img src="./image/facebook.png" alt="">
+					<div class="card-footer">FACEBOOK IUH</div>
+				</a>
+			</div>
+			<div class="col-6 col-lg-4">
+				<a href="https://sv.iuh.edu.vn" target="_blank" class="card">
+					<img src="./image/ASC.png" alt="">
+					<div class="card-footer">SV IUH</div>
+				</a>
+			</div>
+			<div class="col-6 col-lg-4">
+				<a href="https://lms.iuh.edu.vn" target="_blank" class="card">
+					<img src="./image/moodle.png" alt="">
+					<div class="card-footer">LMS</div>
+				</a>
+			</div>
+			<div class="col-6 col-lg-4">
+				<a href="https://doantn.iuh.edu.vn/login.html" target="_blank" class="card">
+					<img src="./image/Doan.png" alt="">
+					<div class="card-footer">ĐOÀN TRƯỜNG</div>
+				</a>
+			</div>
+			<div class="col-6 col-lg-4">
+				<a href="https://sv.iuh.edu.vn/tra-cuu-thong-tin.html" target="_blank" class="card">
+					<img src="./image/ASC.png" alt="">
+					<div class="card-footer">THÔNG TIN SV</div>
+				</a>
+			</div>
+			<div class="col-6 col-lg-4">
+				<a href="http://fit.iuh.edu.vn" target="_blank" class="card">
+					<img src="./image/Logo.png" alt="">
+					<div class="card-footer">KHOA CNTT</div>
+				</a>
+			</div>
+		</div>		
+	</div>
+	
 </body>
 </html>
